--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "cssnano": "^3.10.0",
     "cssnano-cli": "^1.0.5",
     "eslint": "^4.0.0",
+    "imagemin": "^5.3.1",
     "node-sass": "^4.5.3",
     "normalize-scss": "^7.0.0",
     "onchange": "^3.2.1",
